--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 
 buildscript {
     ext.kotlin_version = '1.1.2-3'
+    ext.butterknife_version = '8.6.0'
 
     repositories {
         maven { url 'https://maven.google.com' }
@@ -10,6 +11,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.jakewharton:butterknife-gradle-plugin:$butterknife_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
